--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
     </ul>
 </nav>
 <address>
-    <ul>
-        <li><a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111"></a>+11 (000) 111-11-11</li>
-    </ul>
+    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
 </address>
 
 <body>
