--- a/index.html
+++ b/index.html
@@ -27,16 +27,15 @@
     </header>
     <main>
         <section>
-            <h1>Effective Solutions
-                for Your Business</h1>
+            <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
         <section>
             <ul>
                 <li>
                     <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.</p>
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    </p>
                 </li>
                 <li>
                     <h3>Punctuality</h3>
@@ -82,6 +81,10 @@
             </ul>
         </section>
     </main>
+    <footer>
+        <a href="./index.html" target="_blank">WebStudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 </body>
 
 </html>
