--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a href="#studio">Studio</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address id="contacts">
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -30,7 +30,7 @@
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
-        <section>
+        <section id="studio">
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -55,26 +55,26 @@
             </ul>
         </section>
 
-        <section>
+        <section id="portfolio">
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/Mark Guerrero.png" alt="Mark Guerrero" width="264" height="260">
+                    <img src="./images/MarkGuerrero.png" alt="Mark Guerrero" width="264" height="260">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/Tom Ford.png" alt="Tom Ford" width="264" height="260">
+                    <img src="./images/TomFord.png" alt="Tom Ford" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/Camila Garcia.png" alt="Camila Garcia" width="264" height="260">
+                    <img src="./images/CamilaGarcia.png" alt="Camila Garcia" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Daniel Wilson.png" alt="Daniel Wilson" width="264" height="260">
+                    <img src="./images/DanielWilson.png" alt="Daniel Wilson" width="264" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
