--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
         <section id="studio">
             <ul>
                 <li>
-                    <h3>Strategy</h3>
+                    <h2>Strategy</h2>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
+                    <h2>Punctuality</h2>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
+                    <h2>Diligence</h2>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
+                    <h2>Technologies</h2>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
@@ -59,22 +59,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/MarkGuerrero.png" alt="Mark Guerrero" width="264" height="260">
+                    <img src="./images/JPG/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" height="260">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/TomFord.png" alt="Tom Ford" width="264" height="260">
+                    <img src="./images/JPG/TomFord.jpg" alt="Tom Ford" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/CamilaGarcia.png" alt="Camila Garcia" width="264" height="260">
+                    <img src="./images/JPG/CamilaGarcia.jpg" alt="Camila Garcia" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/DanielWilson.png" alt="Daniel Wilson" width="264" height="260">
+                    <img src="./images/JPG/DanielWilson.jpg" alt="Daniel Wilson" width="264" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
