--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <button type="button">Order Service</button>
         </section>
         <section id="studio">
+            <h2>Our Goal</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
